@@ -1,18 +1,16 @@
 name := "s3mock"
 
-version := "0.2.5"
+version := "0.3.0"
 
-organization := "io.findify"
+organization := "com.hiya"
 
-scalaVersion := "2.12.4"
+scalaVersion := "2.12.8"
 
-crossScalaVersions := Seq("2.11.11", "2.12.4")
+crossScalaVersions := Seq("2.11.12", "2.12.4", "2.13.1")
 
 val akkaVersion = "2.5.11"
 
-licenses := Seq("MIT" -> url("https://opensource.org/licenses/MIT"))
-
-homepage := Some(url("https://github.com/findify/s3mock"))
+homepage := Some(url("https://github.com/hiyainc-oss/s3mock"))
 
 libraryDependencies ++= Seq(
   "com.typesafe.akka" %% "akka-stream" % akkaVersion,
@@ -30,50 +28,11 @@ libraryDependencies ++= Seq(
 
 parallelExecution in Test := false
 
-publishMavenStyle := true
 
-publishTo := {
-  val nexus = "https://oss.sonatype.org/"
-  if (isSnapshot.value)
-    Some("snapshots" at nexus + "content/repositories/snapshots")
-  else
-    Some("releases"  at nexus + "service/local/staging/deploy/maven2")
-}
 
-pomExtra := (
-    <scm>
-      <url>git@github.com:findify/s3mock.git</url>
-      <connection>scm:git:git@github.com:findify/s3mock.git</connection>
-    </scm>
-    <developers>
-      <developer>
-        <id>romangrebennikov</id>
-        <name>Roman Grebennikov</name>
-        <url>http://www.dfdx.me</url>
-      </developer>
-    </developers>)
-
-enablePlugins(DockerPlugin)
-assemblyJarName in assembly := "s3mock.jar"
-mainClass in assembly := Some("io.findify.s3mock.Main")
-test in assembly := {}
-
-dockerfile in docker := new Dockerfile {
-  from("openjdk:9.0.1-11-jre-slim")
-  expose(8001)
-  add(assembly.value, "/app/s3mock.jar")
-  entryPoint("java", "-Xmx128m", "-jar", "--add-modules", "java.xml.bind", "/app/s3mock.jar")
-}
-imageNames in docker := Seq(
-  ImageName(s"findify/s3mock:${version.value.replaceAll("\\+", "_")}"),
-  ImageName(s"findify/s3mock:latest")
-)
-
-/*enablePlugins(JavaAppPackaging)
-
-maintainer in Docker := "S3mock"
-packageSummary in Docker := "S3Mock"
-packageDescription := "Mock Service For S3"
-dockerUpdateLatest := true
-dockerExposedPorts := Seq(8001)
-*/
+licenses += ("MIT", url("http://opensource.org/licenses/MIT"))
+bintrayRepository := "maven"
+bintrayOrganization := Some("hiyainc-oss")
+bintrayReleaseOnPublish in ThisBuild := false
+resolvers += Resolver.bintrayRepo("hiyainc-oss", "maven")
+bintrayPackageLabels := Seq("scala", "collection")
